fix filter alignment

--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -38,7 +38,7 @@
 .main-nav {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     margin-block: 16px;
 
     .main-header.stay & {
