--- a/src/assets/styles/cmps/_search-bar.scss
+++ b/src/assets/styles/cmps/_search-bar.scss
@@ -1,4 +1,6 @@
 .search-bar {
+  display: flex;
+  align-items: center;
   width: auto;
   height: 48px;
   padding: 0 24px;
